# slippi-ai

./: .gitignore  README.md  jax-requirements.txt  requirements.txt  setup.cfg
.claude/: CLAUDE.md
.github/workflows/: test.yml
docker/: jax.dockerfile
notebooks/: extract_vs_phillip_replays.ipynb  local_parse_analysis.ipynb  make_test_dataset.ipynb  player_ratings.ipynb  post_upgrade_check.ipynb
scripts/: eval_two.py  make_wds_dataset.py  netplay.py  profile_data.py  rl.sh  run_evaluator.py
skypilot/: jax_imitation_benchmark.py  jax_imitation_benchmark.yaml  launch.py
slippi_ai/: data.py  datasets.py  dolphin.py  envs.py  eval_lib.py  evaluators.py  nametags.py  paths.py  types.py  unroll_agent.py  utils.py
slippi_ai/data/checkpoints/: jax_demo
slippi_ai/data/checkpoints/jax/: nash_q_fn
slippi_ai/data/mario_dataset/: parsed.sqlite  raw.json
slippi_ai/data/mario_dataset/games/: game  (18).slp  game  (26).slp  game  (34).slp  game  (35).slp  game  (40).slp  game  (41).slp  game  (46).slp  game  (5).slp  game  (52).slp  game  (54).slp  game  (6).slp  game.slp  game1.slp  game10.slp  game11.slp  game12.slp  game14.slp  game16.slp  game17.slp  game19.slp  game20.slp  game22.slp  game23.slp  game24.slp  game25.slp  game27.slp  game29.slp  game30.slp  game31.slp  game33.slp  game4.slp  game43.slp  game44.slp  game45.slp  game47.slp  game49.slp  game51.slp  game53.slp  game55.slp  game56.slp  (+2 more)
slippi_ai/data/toy_dataset/: batch_snapshot.pkl  parsed.sqlite  raw.json
slippi_ai/jax/: agents.py  embed.py  jax_utils.py  learner.py  networks.py  policies.py  policy_learner.py  saving.py  train_lib.py  train_policy.py  train_vf.py  value_function.py  vf_learner.py
slippi_ai/jax/nash/: __init__.py  nash.py  nash_policy_learner.py  optimization.py  optimization_test.py  profile_solver.py  q_fn_learner.py  q_function.py  train_nash_policy.py  train_q_fn.py  utils.py
slippi_ai/jax/nash/scripts/: extract_policy.py  (+2 more)
slippi_ai/jax/q/: q_fn_learner.py  q_policy_learner.py  train_q_fn.py  train_q_policy.py
slippi_ai/jax/rl/: learner.py  run_lib.py  train_two_lib.py
slippi_ai/jax/scripts/: to_numpy_state.py
slippi_ai/jax/tests/: imitation_test.py  jax_utils_test.py  learner_test.py  networks_test.py  train_policy_test.py  train_vf_test.py
slippi_ai/nash/: __init__.py  data.py  nash.py  nash_test.py  profile_pulp.py
slippi_ai/sim_env/: __init__.py  env.py  observations.py
slippi_ai/tf/: networks.py  train_lib.py  train_q_lib.py
slippi_ai/tf/nash/: data.py  learner.py  nash.py  optimization_test.py  profile_solver.py  q_function.py  train_lib.py
slippi_ai/tf/scripts/: imitation.sh  mario_train.sh
slippi_ai/tf/tests/: networks_test.py  training_test.sh
slippi_db/: parse_libmelee.py
tests/: data_batch_snapshot.py  data_test.py  networks_test.py  no_tf_import.py  test_sim_env.py
(+12 files in other folders)
