[metadata]
name = slippi-ai
version = 0.2.0
author = Vlad Firoiu
author_email = vladfi2@gmail.com
description = Imitation learning from slippi replays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladfi1/slippi-ai
project_urls =
    Bug Tracker = https://github.com/vladfi1/slippi-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    slippi_ai
    slippi_ai/data
    slippi_ai/action_space
    slippi_ai/rl
    slippi_ai/jax
    slippi_ai/jax/q
    slippi_ai/jax/nash
    slippi_ai/jax/rl
    slippi_ai/sim_env
    slippi_ai/tf
    slippi_ai/nash
    slippi_db
    skypilot
include_package_data = True
python_requires = >=3.12
install_requires =
    pandas
    dm-tree
    melee>=0.47.1
    dnspython
    fancyflags
    fsspec
    numpy
    pyarrow
    peppi-py-vladfi
    py7zr
    parameterized
    portpicker
    tqdm
    wandb

[options.extras_require]
dev =
    pylint>=2.14.0
    nbstripout

train =
    skypilot
    webdataset
    pulp

twitchbot =
    twitchio<3.0.0
    ray

tf =
    dm-sonnet
    tf-nightly
    tfp-nightly[tf]

tf-cuda =
    slippi-ai[tf]
    tf-nightly[and-cuda]

jax =
    jax
    flax>=0.12
    qpax>=0.0.10
    tfp-nightly

cuda12 =
    jax[cuda12]
    nvidia-ml-py

cuda13 =
    jax[cuda13]
    nvidia-ml-py

jax-tf-cuda =
    slippi-ai[jax]
    jax[cuda12]
    slippi-ai[tf-cuda]
